output ports overflow fixed

--- a/themes/default/modules/node.css
+++ b/themes/default/modules/node.css
@@ -61,12 +61,14 @@
   
 
 .dataflow-node-inner {
+  clear: both;
   color: hsl(0,0%,66%);
   font-size: 12px;
   font-weight: normal;
 }
 
 .dataflow-nodes-helpers {
+  z-index: 9999;
   position: absolute;
   top: 0;
   left: 0;
@@ -76,7 +78,6 @@
   -ms-transform: translate3d(0,0,0);
   -moz-transform: translate3d(0,0,0);
   -webkit-transform: translate3d(0,0,0);
-  z-index: 9999;
 }
 
 /* Fade */
